fixed styles bug with jumping hero typed text on the main page

--- a/src/pages/main/components/hero/hero.module.css
+++ b/src/pages/main/components/hero/hero.module.css
@@ -37,3 +37,7 @@
 .left {
 	background-color: white;
 }
+
+.heroText {
+	min-height: 2rem;
+}
